Cleanup/Refactoring